--- a/Gyakorlás/lujzi.html
+++ b/Gyakorlás/lujzi.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lujzi</title>
 
-    <link rel="stylesheet" href="lujzi-css/lujzi.css">
+    <link rel="stylesheet" href="Lujzibaba-css/lujzi.css">
 </head>
 <body>
     <h2>Minden kiscica nagycica akar lenni!</h2>
@@ -25,7 +25,7 @@
     <img width="380" height="420" src="Lujzi képek/Lujzi.jpg" alt="Lujzi">
 
     <p>Nagy mókamester vagyok ám...</p>
-    <img width="380" height="550" src="Lujzi képek/Lujzi7.jpg" alt="Lujzi">
+    <img width="380" height="500" src="Lujzi képek/Lujzi8.jpg" alt="Lujzi">
 
 </body>
 </html>
